# peach-tbot

./: @  Cargo.toml  README.md  gmail.py
debian/: peach-tbot.service
src/: email.rs  main.rs  tele.rs
