[package]
name = "wgbot"
version = "0.1.0"
authors = ["Max Fowler <maxhfowler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = "0.7"
dotenv = "0.15.0"
futures = "0.3.7"
tokio = { version = "0.2", features = ["macros", "time", "fs"] }
imap = "2.3.0"
native-tls = "0.2.6"
